Add contact_phone and address fields to store form and translations
- Add phone and address fields to the basic store form view.
- Ensure contact_phone and address fields support translation.
- Update `en.yml` to include translations for contact_phone and address.

--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -151,6 +151,8 @@ en:
         updated: Updated
         user: User
       spree/store:
+        address: Address
+        contact_phone: Contact Phone
         mail_from_address: Mail From Address
         meta_description: Meta Description
         meta_keywords: Meta Keywords
