[Skip CI] update multi tenant documentation

--- a/docs/developer/multi-tenant/quickstart.mdx
+++ b/docs/developer/multi-tenant/quickstart.mdx
@@ -14,3 +14,7 @@ To sum it up:
 
 * Multi-Store setup is recommended for running multiple brands or multiple language versions of the same store
 * Multi-Tenant allows you to create a SaaS application with multiple tenants, each of them with their own Spree instance
+
+## Setup SaaS application
+
+[Follow the installation instructions](/developer/multi-tenant/installation) to setup a multi-tenant Spree application.
