[Skip CI] added more info in sendgrid docs

--- a/docs/developer/deployment/emails.mdx
+++ b/docs/developer/deployment/emails.mdx
@@ -30,4 +30,10 @@ If you're not using Spree Starter you will need to add these code in your `confi
   end
 ```
 
+<Warning>
+Remember to verify the email address in SendGrid, you intend to use for sending emails, otherwise emails will be rejected.
+
+[Read more about SendGrid sender verification](https://www.twilio.com/docs/sendgrid/ui/sending-email/sender-verification)
+</Warning>
+
 That's it! You can now send emails from your application.
