--- a/docs/user/manage-products/stock-transfers.mdx
+++ b/docs/user/manage-products/stock-transfers.mdx
@@ -16,7 +16,7 @@ To create a new stock transfer, navigate to **Products → Stock → Stock Trans
 
 ![](/docs/images/user/products/stock-transfers/1.stock_transfers_tab.png)
 
-Click **New Stock Transfer** in the top-right corner and you’ll be redirected to the stock transfer creation form.
+Click **New Stock Transfer** in the top-right corner, and you’ll be redirected to the stock transfer creation form.
 
 ![](/docs/images/user/products/stock-transfers/2.transfer_form.png)
 
@@ -36,13 +36,13 @@ At the top of the form, you can specify the details of the stock transfer:
 
 ![](/docs/images/user/products/stock-transfers/4.add_products.png)
 
-At the bottom of the form is where you can add the products to be transfered.
+At the bottom of the form, you can add the products to be transferred.
 
 To do so, click **\+ Add Products** and a search window will open, allowing you to start typing a product name to find matching variants.
 
 ![](/docs/images/user/products/stock-transfers/5.select_variants.png)
 
-Select a variant and then click **Add selected variant** to add it to the stock transfer.
+Please select a variant and then click **Add selected variant** to add it to the stock transfer.
 
 ![](/docs/images/user/products/stock-transfers/6.variants_added.png)
 
