--- a/docs/developer/multi-vendor/installation.mdx
+++ b/docs/developer/multi-vendor/installation.mdx
@@ -15,7 +15,7 @@ description: Learn how to setup a multi-vendor marketplace with Spree
   * `KEYGEN_ACCOUNT_ID`
   * `KEYGEN_LICENSE_KEY`
 * We support both PostgreSQL and MySQL databases
-* Redis for background jobs
+* Redis/Valkey for background jobs
 
 <Info>
   Environment variables will be provided to you after purchasing the [Spree Enterprise Edition license](https://spreecommerce.org/pricing).
