--- a/docs/developer/multi-vendor/installation.mdx
+++ b/docs/developer/multi-vendor/installation.mdx
@@ -42,9 +42,10 @@ description: Learn how to setup a multi-vendor marketplace with Spree
     bundle install
     ```
 
-3. Run generator:
+3. Run generators:
 
     ```bash
+    bundle exec rails spree_enterprise:install 
     bundle exec rails spree_multi_vendor:install
     ```
 
