[skip ci] fixed installatation instructions for multi tenant/multi vendor gems

--- a/docs/developer/multi-vendor/installation.mdx
+++ b/docs/developer/multi-vendor/installation.mdx
@@ -45,10 +45,9 @@ description: Learn how to setup a multi-vendor marketplace with Spree
 3. Run generators:
 
     ```bash
-    bundle exec rails spree_enterprise:install 
-    bundle exec rails spree_multi_vendor:install
+    bundle exec rails g spree_enterprise:install && bundle exec rails g spree_multi_vendor:install
     ```
 
     <Info>
-      This will copy and run migrations for `spree_multi_vendor` gem.
+      This will copy and run migrations for `spree_enterprise` and `spree_multi_vendor` gems.
     </Info>
