--- a/docs/developer/multi-tenant/installation.mdx
+++ b/docs/developer/multi-tenant/installation.mdx
@@ -96,10 +96,9 @@ Spree.admin_user_class = "Spree::AdminUser"
 3. Run generators:
 
     ```bash
-    bundle exec rails spree_enterprise:install
-    bundle exec rails spree_multi_tenant:install
+    bundle exec rails g spree_enterprise:install && bundle exec rails g spree_multi_tenant:install
     ```
 
     <Info>
-      This will copy and run migrations for `spree_enterprise` and `spree_multi_tenant` gem.
+      This will copy and run migrations for `spree_enterprise` and `spree_multi_tenant` gems.
     </Info>
